--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,10 @@ jobs:
           node-version: 14.0.0
 
       - name: 安装依赖
-        id: yarn-cache
-        run: yarn
+        run: npm install
 
       - name: 打包
-        run: yarn build
+        run: npm run build
 
       - name: 发布到阿里云
         uses: easingthemes/ssh-deploy@2.1.5
