--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 迁出代码
-        uses: actions/checkout@master
+        uses: actions/checkout@@v1
 
       - name: 安装node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 14.0.0
+          node-version: "14.16.1"
 
       - name: 安装依赖
         run: npm install
@@ -25,13 +25,13 @@ jobs:
 
       - name: 发布到阿里云
         uses: easingthemes/ssh-deploy@2.1.5
-        env: 
+        env:
           #私钥
           SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           #SCp参数
           ARGS: "-avzr --delete"
           #源目录
-          SOURCE: "dist/"
+          SOURCE: "dist"
           #服务器1p:换成你的服务器P
           REMOTE_HOST: "39.98.45.141"
           #用户
