--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 迁出代码
-        uses: actions/checkout@@latest
+        uses: actions/checkout@latest
 
       - name: 安装node.js
         uses: actions/setup-node@v1
