--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: 打包
         run: npm run build
-        
+
 
       - name: 发布到阿里云
         uses: easingthemes/ssh-deploy@v2.1.5
@@ -30,7 +30,7 @@ jobs:
           #私钥
           SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           #SCp参数
-          ARGS: "-avzr --delete"
+          ARGS: "-rltgoDzvO --delete"
           #源目录
           SOURCE: "dist"
           #服务器1p:换成你的服务器P
