--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           #私钥
           SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           #SCp参数
-          ARGS: "-rltgoDzvO --delete"
+          ARGS: "-avzr --delete"
           #源目录
           SOURCE: "dist"
           #服务器1p:换成你的服务器P
