--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,9 @@ jobs:
           #源目录
           SOURCE: "dist"
           #服务器1p:换成你的服务器P
-          REMOTE_HOST: "39.98.45.141"
+          REMOTE_HOST: "47.114.3.158"
           #用户
           REMOTE_USER: "root"
           #目标地址
-          TARGET: "/app/web/vite_test"
+          # TARGET: "/app/web/vite_test"
+          TARGET: "/root/vite_test"
