--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           #SCp参数
           ARGS: "-rltgoDzvO --delete"
           #源目录
-          SOURCE: "dist"
+          SOURCE: "dist/"
           #服务器1p:换成你的服务器P
           REMOTE_HOST: "47.114.3.158"
           #用户
