--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,10 @@ jobs:
           #源目录
           SOURCE: "dist/"
           #服务器1p:换成你的服务器P
-          REMOTE_HOST: "47.114.3.158"
+          # REMOTE_HOST: "47.114.3.158"
+          REMOTE_HOST: "39.98.45.141"
           #用户
           REMOTE_USER: "root"
           #目标地址
-          # TARGET: "/app/web/vite_test"
-          TARGET: "/root/vite_test"
+          TARGET: "/app/web/vite_test"
+          # TARGET: "/root/vite_test"
